<resources>
    <string name="app_name">Jardín De Niños Solecito</string>
    <!--Activity Add Album-->
    <string name="title_placeholder">TITULO</string>
    <string name="group_list_title">Grupos</string>
    <string name="checkbox_all_title">TODOS</string>

    <!--Activity Add Links-->
    <string name="url_placeholder">URL</string>

    <!--Activity Add Notifications-->
    <string name="details_placeholder">DETALLES</string>


    <!--Activity Add Selected Photos-->
    <string name="add_caption_placeholder">Add Caption</string>
    <string name="add_photo_title">Agregar Foto</string>

    <!--Activity Add Event-->
    <string name="location_placeholder">Locacion</string>
    <string name="category_placeholder">Categoria</string>
    <string name="start_date_placeholder">Fecha de Inicio</string>
    <string name="end_date_placeholder">Fecha de Terminación</string>
    <string name="start_time_placeholder">Hora de Inicio</string>
    <string name="end_time_placeholder">Hora de Terminación</string>
    <string name="reminder_title">Recordatorio</string>
    <string name="day_button_title">1 Día</string>
    <string name="hour_button_title">0 Horas</string>
    <string name="minute_button_title">0 Minutos</string>
    <string name="repeat_checkbox_title">Repetición</string>
    <string name="repeats_title">Repeticiones</string>
    <string name="daily_button_title">Diariamente</string>
    <string name="repeat_for_title">Repetir para</string>
    <string name="vertical_title">Vertical:</string>
    <string name="monday_checkbox_title">LUNES</string>
    <string name="tuesday_checkbox_title">MARTES</string>
    <string name="wednesday_checkbox_title">MIERCOLES</string>
    <string name="thursday_checkbox_title">JUEVES</string>
    <string name="friday_checkbox_title">VIERNES</string>
    <string name="saturday_checkbox_title">SABADO</string>
    <string name="sunday_checkbox_title">DOMINGO</string>
    <string name="day_of_the_month_checkbox_title">Dia del Mes</string>
    <string name="day_of_the_week_checkbox_title">Dia de la Semana</string>
    <string name="repeat_count_title">Cuenta de Repetición</string>
    <string name="never_checkbox_title">Nunca</string>
    <string name="occurrences_title">Ocurrencias</string>
    <string name="after_checkbox_title">Después</string>
    <string name="add_event_button_title">Agregar Evento</string>

    <!--Activity Event Detail-->
    <string name="starts_title">Inicia</string>
    <string name="ends_title">Termina</string>
    <string name="save_event_button_title">Guardar Evento</string>

    <!--Activity Settings-->
    <string name="notification_groups_title">NOTIFICACIONES GRUPALES</string>
    <string name="save_button_title">Guardar</string>

    <!--Activity Forgot Password-->
    <string name="email_id_placeholder">Correo Electronico</string>
    <string name="Submit_button_title">Confirmar</string>

    <!--Fragment Calendar-->
    <string name="floating_button_title_holiday">VACACION</string>
    <string name="floating_button_title_event">EVENTO</string>
    <string name="floating_button_title_school_holiday">FERIADOS ESCOLARES</string>

    <!--Fragment Calendar List -->
    <string name="no_events_title">No Events</string>

    <!--Fragment Calendar Month-->
    <string name="today_button_title">HOY</string>

    <!--Footer Button-->
    <string name="add_link_button_title">Agregar Enlace</string>


    <string name="action_settings">Settings</string>
    <string name="description_image_default">description_image_default</string>

    <!-- Strings related to login -->
    <string name="prompt_email">USUARIO</string>
    <string name="prompt_password">Contraseña</string>
    <string name="confirm_password_placeholder">Confirmar Contraseña</string>
    <string name="forgot_password_title">Olvidé mi contraseña</string>
    <string name="register_button_title">Registrarse</string>
    <string name="action_sign_in">INGRESAR</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_title">BIENVENIDO</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="activity_login_title">Sircle</string>
    <string name="activity_login_address_text">Mazagaon,\nMumbai-10\nIndia</string>
    <string name="activity_login_email_address">support@snaptech.in</string>
    <string name="activity_login_contact_number">+919819737252</string>
    <string name="gcm_senderId">526007976502</string>

    <!-- Splash -->
    <string name="activity_splash_powered_by_text">"Powered By : Snaptech Digital Solutions"</string>

    <!-- Sliding Pane -->
    <string-array name="array_module_name">
        <item>INICIO</item>
        <item>CALENDARIO</item>
        <item>FOTOS</item>
        <item>MENSAJES</item>
        <item>BOLETIN INFORMATIVO</item>
        <item>DOCUMENTOS</item>
        <item>VIDEOS</item>
        <item>ENLACES</item>
        <item>AJUSTES</item>
        <item>INFORMACION</item>
        <item>SOPORTE TECNICO</item>
        <item>CERRAR SESION</item>

    </string-array>

    <string-array name="array_module_name_withou_settings">
        <item>INICIO</item>
        <item>CALENDARIO</item>
        <item>FOTOS</item>
        <item>MENSAJES</item>
        <item>BOLETIN INFORMATIVO</item>
        <item>DOCUMENTOS</item>
        <item>VIDEOS</item>
        <item>ENLACES</item>
        <item>INFORMACION</item>
        <item>SOPORTE TECNICO</item>
        <item>CERRAR SESION</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_home_development_title">Sircle Development School</string>
    <string name="fragment_home_school_moto">Inspire. Integrate. Innovate</string>

    <!-- Home Fragment-->
    <string name="fragment_home_title">Home</string>

    <!-- Photos Fragment-->
    <string name="fragment_photos_title">Photos</string>

    <!-- video fragment-->
    <string name="fragment_video_title">Video</string>
    <string name="fragment_video_video_source_label_demmy_text">Youtube</string>

    <string name="title_activity_pdfviewer">PDFViewer</string>

    <!-- NewsLetter fragment -->
    <string name="fragment_news_letter_title">NewsLetter</string>
    <string name="title_activity_alnum_details">AlnumDetailsActivity</string>

    <!-- NewsLetter fragment -->
    <string name="fragment_documents_title">Documents</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_add_links">Agregar Enlaces </string>
    <string name="title_activity_add_notification">Mandar Mensaje</string>
    <string name="title_activity_add_album">Agregar Album</string>


    <string name="title_activity_events_list">Eventos</string>
    <string name="title_activity_add_photo_tabbed">Pick photo </string>

    <string name="title_activity_add_selected_photo">Add new photo</string>

    <string name="title_activity_holiday">Vacacion</string>
    <string name="title_activity_school_holiday">Feriados Escolares</string>
    <string name="title_activity_event">Evento</string>
    <string name="title_activity_event_detail">Detalles del Evento</string>
    <string name="title_activity_vimeo_webview">VimeoWebviewActivity</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="add_holiday_button_title">Agregar Vacacion</string>
    <string name="youtube_link"><a href="https://www.youtube.com/channel/UCQQnqJpgn3k25AO3CCN59Bw">YouTube</a></string>
</resources>