<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_blue_light"
    tools:context="com.app.sircle.UI.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cast_dark"
                    android:contentDescription="@string/description_image_default"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/activity_login_title"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"/>

                <!-- Username view-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@android:drawable/ic_menu_add"
                        android:contentDescription="@string/description_image_default"
                        android:padding="5dp"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray"/>


                    <AutoCompleteTextView android:id="@+id/activity_login_email_text_view" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_email"
                        android:textColorHint="@android:color/white"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:singleLine="true" />

                </LinearLayout>

                <!-- Password view-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@android:drawable/ic_menu_add"
                        android:contentDescription="@string/description_image_default"
                        android:padding="5dp"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray"/>


                    <EditText android:id="@+id/activity_login_password_edittext" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified" android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColorHint="@android:color/white"
                        android:maxLines="1" android:singleLine="true" />


                </LinearLayout>


                <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- View below login button-->

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/activity_login_address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_login_address_text"
                    android:textColor="@android:color/white"
                    android:lineSpacingExtra="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/activity_login_address_text_view_size" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical"
                    android:layout_alignParentRight="true">

                    <TextView
                        android:id="@+id/activity_login_email_address_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_login_email_address"
                        android:autoLink="email"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:lineSpacingExtra="1dp"
                        android:textColorLink="@android:color/white"
                        android:textSize="@dimen/activity_login_address_text_view_size" />

                    <TextView
                        android:id="@+id/activity_login_contact_number_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/activity_login_contact_number"
                        android:textColor="@android:color/white"
                        android:lineSpacingExtra="1dp"
                        android:layout_marginTop="10dp"
                        android:textColorLink="@android:color/white"
                        android:textSize="@dimen/activity_login_address_text_view_size" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

